<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/bluetoothOFF"
        android:layout_width="217dp"
        android:layout_height="92dp"
        android:gravity="center"
        android:text="@string/bluetoothOff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>


    <ImageView
        android:id="@+id/ampelStart"
        android:layout_width="258dp"
        android:layout_height="258dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/connectLost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ampelgreen" />

    <TextView
        android:id="@+id/connectLost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/bluetoothErlaubnis"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20sp"
        android:visibility="visible"
        android:text="@string/connect"
        app:layout_constraintBottom_toTopOf="@+id/select_device_refresh"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20sp" />

    <Button
        android:id="@+id/select_device_refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20sp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20sp"
        android:visibility="invisible"/>



</androidx.constraintlayout.widget.ConstraintLayout>